Fix white bar on iPhone?

--- a/style.css
+++ b/style.css
@@ -9,14 +9,17 @@ html {
 }
 
 body {
-  background: linear-gradient(to bottom, #468af1, #6ea6f0, #add8e6);
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.container {
+  background: linear-gradient(to bottom, #468af1, #6ea6f0, #add8e6);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
 
 .center-align {
